Fixed some layout issues but codemirror is acting really funky and not inserting stuff into the textarea like it should.

--- a/css/application.css
+++ b/css/application.css
@@ -4,8 +4,5 @@ body {
 }
 
 #instructions {
-  text-align: right;
+  float:right;
 }
-
-
-
